[tool.poetry]
name = "sidekick"
version = "0.4.2"
description = "The companion that gives you functional superpowers"
authors = ["Fábio Macêdo Mendes <fabiomacedomendes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
