[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "sidekick"
version = "0.4.2"
description = "The companion that gives you functional superpowers"
authors = ["Fábio Macêdo Mendes <fabiomacedomendes@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]


[tool.black]
line-length = 88
target_version = ['py36']
include = 'src|tests'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''


