[metadata]
name = sidekick
version = 0.4.2
description = The companion that gives you functional superpowers
long_description = file: README.rst
author = Fábio Macêdo Mendes
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/sidekick/
keywords =
    functional programming
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
platforms = all
include_package_data = True
install_requires =
    toolz


[options.extras_require]
docs =
    sphinx
dev =
    invoke >= 1.0
    flake8 ~= 3.7
    manuel ~= 1.10
    pytest ~= 4.2
    pytest-cov ~= 2.6

